Layout bug fixes, Search layout

--- a/UI/Spotify/Components/Search.scss
+++ b/UI/Spotify/Components/Search.scss
@@ -1,61 +1,133 @@
-﻿.search {
-    width: 940px;
-    height: 30px;
-    background: $color--jumbo-dark;
-    border: 1px solid $color--jumbo-dark;
-    border-radius: 10px;
-    font-family: 'SF Pro Text';
-    font-size: 16px;
-    line-height: 24px;
-    color: $color--white;
-    padding: 8px;
-    padding-left: 35px;
-    background-repeat: no-repeat;
-    background-position: left 11px center;
-    flex: 0.8;
-    background-image: url('../svg/search.svg');
+.search {
+	width: 940px;
+	height: 30px;
+	background: $color--jumbo-dark;
+	border: 1px solid  $color--jumbo-dark;
+	border-radius: 10px;
+	font-family: 'SF Pro Text';
+	font-size: 16px;
+	line-height: 24px;
+	color: $color--white;
+	padding: 8px;
+	padding-left: 35px;
+	background-repeat: no-repeat;
+	background-position: left 11px center;
+	flex: 0.8;
+	background-image: url('../svg/search.svg');
+
+	&__layout h2{
+		margin: 0;
+		font-family: SF Pro Rounded;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: #FFFFFF;
+		margin-bottom: 24px;
+	}
+
+	&__artists {
+		&__layout {
+			display: flex;
+		}
+
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-right: 15px;
+	}
+	
+	&__artist {
+		width: 200px;
+		height: 200px;
+		border-radius: 50%;
+		object-fit: cover;
+
+		&:hover {
+			box-shadow: 1px 1px 12px 6px rgba(0, 0, 0, 0.35);
+			transition: .5s;
+		}
+	}
 }
 
 .search-view {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.5);
-    visibility: hidden;
-    opacity: 0;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: rgba(0, 0, 0, 0.5);
+	visibility: hidden;
+	opacity: 0;
 
-    &:target {
-        visibility: visible;
-        opacity: 1;
-    }
+	&:target {
+		visibility: visible;
+		opacity: 1;
+	}
 
-    &__window {
-        position: absolute;
-        width: 895px;
-        height: 934px;
-        left: 468px;
-        top: 136px;
-        background: #323236;
-        border-radius: 10px;
-    }
+	&__window {
+		position: absolute;
+		width: 895px;
+		height: 934px;
+		left: 468px;
+		top: 136px;
+		background: #323236;
+		border-radius: 10px;
+	}
 }
 
 @media(max-width: 1680px) {
-    .search {
-        height: 25px;
-    }
+	.search {
+		height: 25px;
+
+		&__artist {
+			width: 180px;
+			height: 180px;
+		}
+
+		&__layout h2{
+			font-size: 35px;
+			margin-bottom: 15px;
+		}
+	}
 }
 
 @media(max-width: 1366px) {
-    .search {
-        height: 20px;
-    }
+	.search {
+		height: 20px;
+
+		&__artist {
+			width: 150px;
+			height: 150px;
+		}
+
+		&__artists {
+			margin-right: 10px;
+		}
+
+		&__layout h2{
+			font-size: 28px;
+			margin-bottom: 10px;
+		}
+	}
 }
 
 @media(max-width: 1024px) {
-    .search {
-        height: 16px;
-    }
+	.search {
+		height: 16px;
+
+		&__artist {
+			width: 120px;
+			height: 120px;
+		}
+
+		&__artists {
+			margin-right: 5px;
+		}
+
+		&__layout h2{
+			font-size: 20px;
+			margin-bottom: 5px;
+		}
+	}
 }
